SIMD Intrinsics Fortran bindings/GMS_avx512_wrappers_.h

// Compile it as a C-code

    // Interoperable with corresponding Fortran derived type

        typedef struct __attribute__((align(64))) v8f64 {
                 double v[8];
        }v8f64;
	v8f64  v8f64_min_round_pd(v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	double  v8f64_mask_reduce_max_pd(unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	double  v8f64_reduce_max_pd(v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	double  v8f64_mask_reduce_min_pd(unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	double  v8f64_reduce_min_pd(v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_unpacklo_pd(v8f64, unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_unpacklo_pd(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_unpacklo_pd(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_unpackhi_pd(v8f64, unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_unpackhi_pd(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_unpackhi_pd(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_shuffle_pd(v8f64, unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_shuffle_pd(unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_shuffle_pd(v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_shuffle_f64x2(v8f64, unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_shuffle_f64x2(unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_shuffle_f64x2(v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_permutex_pd(v8f64, unsigned char, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));