SIMD Intrinsics Fortran bindings/GMS_avx512_bindings.f90


         interface
            function v8f64_min_round_pd(a,b,sae) &
                 bind(c,name='v8f64_min_round_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 integer(c_int),  intent(in), value :: sae
                 type(v8f64) :: v8f64_min_round_pd
            end function v8f64_min_round_pd
         end interface

         interface
            function v8f64_mask_reduce_max_pd(k,a) &
                 bind(c,name='v8f64_mask_reduce_max_pd')
                 import :: v8f64
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 real(c_double) :: v8f64_mask_reduce_max_pd
            end function v8f64_mask_reduce_max_pd
         end interface

         interface
            function v8f64_reduce_max_pd(a) &
                 bind(c,name='v8f64_reduce_max_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: a
                 real(c_double) :: v8f64_reduce_max_pd
            end function v8f64_reduce_max_pd
         end interface

         interface
            function v8f64_mask_reduce_min_pd(k,a) &
                 bind(c,name='v8f64_mask_reduce_min_pd')
                 import :: v8f64
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 real(c_double) :: v8f64_mask_reduce_min_pd
            end function v8f64_mask_reduce_min_pd
         end interface

         interface
            function v8f64_reduce_min_pd(a) &
                 bind(c,name='v8f64_reduce_min_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: a
                 real(c_double) :: v8f64_reduce_min_pd
            end function v8f64_reduce_min_pd
         end interface
         
         interface
            function v8f64_mask_unpacklo_pd(src,k,a,b) &
                 bind(c,name='v8f64_mask_unpacklo_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: src
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 type(v8f64) :: v8f64_mask_unpacklo_pd
            end function v8f64_mask_unpacklo_pd
         end interface

         interface
            function v8f64_maskz_unpacklo_pd(k,a,b) &
                 bind(c,name='v8f64_maskz_unpacklo_pd')
                 import :: v8f64
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 type(v8f64) :: v8f64_mask_unpacklo_pd
            end function v8f64_maskz_unpacklo_pd
         end interface

         interface
            function v8f64_unpacklo_pd(a,b) &
                 bind(c,name='v8f64_unpacklo_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 type(v8f64) :: v8f64_unpacklo_pd
            end function v8f64_unpacklo_pd
         end interface

         interface
            function v8f64_mask_unpackhi_pd(src,k,a,b) &
                 bind(c,name='v8f64_mask_unpackhi_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: src
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 type(v8f64) :: v8f64_mask_unpackhi_pd
            end function v8f64_mask_unpackhi_pd
         end interface

         interface
            function v8f64_maskz_unpackhi_pd(k,a,b) &
                 bind(c,name='v8f64_maskz_unpackhi_pd')
                 import :: v8f64
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 type(v8f64) :: v8f64_maskz_unpackhi_pd
            end function v8f64_maskz_unpackhi_pd
         end interface

         interface
            function v8f64_unpackhi_pd(a,b) &
                 bind(c,name='v8f64_unpackhi_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 type(v8f64) :: v8f64_unpackhi_pd
             end function v8f64_unpackhi_pd
         end interface

         interface
            function v8f64_mask_shuffle_pd(src,k,a,b,imm8) &
                 bind(c,name='v8f64_mask_shuffle_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: src
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 integer(c_int),  intent(in), value :: imm8
                 type(v8f64) :: v8f64_mask_shuffle_pd
            end function v8f64_mask_shuffle_pd
         end interface

         interface
            function v8f64_maskz_shuffle_pd(k,a,b,imm8) &
                 bind(c,name='v8f64_maskz_shuffle_pd')
                 import :: v8f64
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 integer(c_int),  intent(in), value :: imm8
                 type(v8f64) :: v8f64_maskz_shuffle_pd
            end function v8f64_maskz_shuffle_pd
         end interface

         interface
            function v8f64_shuffle_pd(a,b,imm8) &
                 bind(c,name='v8f64_shuffle_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 integer(c_int),  intent(in), value :: imm8
                 type(v8f64) :: v8f64_shuffle_pd
            end function v8f64_shuffle_pd
         end interface

         interface
            function v8f64_mask_shuffle_f64x2(src,k,a,b,imm8) &
                 bind(c,name='v8f64_mask_shuffle_f64x2')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: src
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 integer(c_int),  intent(in), value :: imm8
                 type(v8f64) :: v8f64_mask_shuffle_f64x2
             end function v8f64_mask_shuffle_f64x2
         end interface

         interface
            function v8f64_maskz_shuffle_f64x2(k,a,b,imm8) &
                 bind(c,name='v8f64_maskz_shuffle_f64x2')
                 import :: v8f64
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 integer(c_int),  intent(in), value :: imm8
                 type(v8f64) :: v8f64_maskz_shuffle_f64x2
             end function v8f64_maskz_shuffle_f64x2
         end interface

         interface
            function v8f64_shuffle_f64x2(a,b,imm8) &
                 bind(c,name='v8f64_shuffle_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: a
                 type(v8f64),     intent(in)        :: b
                 integer(c_int),  intent(in), value :: imm8
                 type(v8f64) :: v8f64_shuffle_f64x2
             end function v8f64_shuffle_f64x2
         end interface

         interface
            function v8f64_mask_permutex_pd(src,k,a,imm8) &
                 bind(c,name='v8f64_mask_permutex_pd')
                 import :: v8f64
                 type(v8f64),     intent(in)        :: src
                 integer(c_char), intent(in), value :: k
                 type(v8f64),     intent(in)        :: a
                 integer(c_int),  intent(in), value :: imm8
                 type(v8f64) :: v8f64_mask_permutex_pd
            end function v8f64_mask_permutex_pd
         end interface

          
    
end module mod_avx512_bindings
